--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,24 +6,25 @@ services:
     build: .
     command: python3 app.py
     links:
-      - db
+      - users-db
     ports:
       - "5005:5005"
     depends_on:
-      - db
+      - users-db
 
-  db:
+  users-db:
     image: mysql:5.7
     container_name: users-db
     restart: always
     environment:
-      MYSQL_DATABASE: 'db'
+      MYSQL_DATABASE: 'users'
       # So you don't have to use root, but you can if you like
       MYSQL_USER: 'user'
       # You can use whatever password you like
       MYSQL_PASSWORD: 'password'
       # Password for root access
       MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_HOST: 'users-db'
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3307:3306'
@@ -31,11 +32,7 @@ services:
       # Opens port 3306 on the container
       - '3307'
       # Where our data will be persisted
-    volumes:
-      - my-db:/var/lib/mysql
-# Names our volume
-volumes:
-  my-db:
+    
 
 
 
