--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,14 @@ services:
     container_name: users-db
     restart: always
     environment:
-      MYSQL_DATABASE: 'users'
+      MYSQL_DATABASE: users
       # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'user'
+      MYSQL_USER: user
       # You can use whatever password you like
-      MYSQL_PASSWORD: 'password'
+      MYSQL_PASSWORD: password
       # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password'
-      MYSQL_HOST: 'users-db'
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_HOST: users-db
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3307:3306'
